--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immer": "^1.10.0",
+    "konva": "^2.6.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-konva": "^16.7.1",
     "react-scripts": "2.1.2"
   },
   "scripts": {
