--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-konva": "^16.7.1",
+    "react-markdown": "^4.0.6",
     "react-scripts": "2.1.2"
   },
   "scripts": {
